compiler/test-data/parser/errors/scheme/missing_colon.frel
module test

scheme User {
    name String
}
